# Recsys_study

./: .gitignore  README.md  diff.txt  evaluate.py  main.py  pyproject.toml  run.py
models/: bpr_mf.py  lightgcn.py  sasrec.py  two_tower_cl.py
notebooks/: 01_Data_EDA.ipynb  02_Data_Split.ipynb
results/Clothing_Shoes_and_Jewelry/eda/: 00_basic_stats.txt
results/Clothing_Shoes_and_Jewelry/eval/: BPR-MF_metrics.txt  LightGCN_metrics.txt  SASRec_metrics.txt  TwoTower_metrics.txt
trainers/: bpr_trainer.py  seq_trainer.py
utils/: data_loader.py  dataset.py  early_stopping.py  metrics.py  plotter.py  seq_dataset.py
