[project]
name = "recsys-study"
version = "0.1.0"
description = "이커머스 추천시스템 모델 비교"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
